# onekey-run-rs

./: .gitignore  Cargo.toml  dev.py  onekey-tasks.yaml
docs_design/: 01_actions_hooks_design.md  02_actions_context_variables.md  03_actions_hooks_schema_draft.md  04_actions_hooks_execution_flow.md  05_actions_hooks_check_errors.md  06_actions_hooks_implementation_plan.md  07_instance_log_top_level_design.md  07_management_recent_events_design.md  08_tui_events_panel_design.md  09_config_generator_design.md  10_config_naming_strict_policy_design.md  11_list_command_design.md  12_run_command_design.md  13_service_watch_design.md  14_tui_service_restart_design.md  15_tui_keep_mode_design.md  16_env_concat_design.md  README.md
docs_dev/: 01_scope_and_goals.md  02_cli_contract.md  03_config_schema.md  04_runtime_contract.md  05_architecture_plan.md  06_engineering_conventions.md  07_decision_log.md  08_cross_platform_strategy.md  09_runtime_state_persistence.md  10_logging_design.md  11_config_generator_tasks.md  12_list_command_tasks.md  13_run_command_tasks.md  14_service_watch_tasks.md  15_tui_service_restart_tasks.md  16_tui_keep_mode_tasks.md  17_env_concat_phase1_tasks.md  README.md
docs_issue/: deferred__Q20260316-02__模板示例偏Unix.md  resolved__Q20260316-01__down忽略config路径.md  resolved__Q20260316-02__模板示例偏Unix.md
skills/onekey-run-config-authoring/: SKILL.md
src/: app.rs  cli.rs  config.rs  error.rs  file_log.rs  main.rs  orchestrator.rs  process.rs  runtime_state.rs  tui.rs  watch.rs
